--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: url(/img/img_1.jpeg) 0 0/cover no-repeat;
+  background: url(/img/img_1.jpeg) right 0/cover no-repeat;
   width: 150px;
   height: 150px;
   border-radius: 50%;
