--- a/css/footer.css
+++ b/css/footer.css
@@ -92,150 +92,97 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------*/
 /*Обнуление*/
 .footer {
+  background-color: #111;
+  width: 100%;
+  min-height: 200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 980px;
-  min-height: 10%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0 auto;
 }
 
-.tel_text {
-  color: #ffffff;
-  width: 25%;
-  text-align: center;
-  margin: 20px 20px;
-}
-
-.tel_mailto {
-  color: #ffffff;
-  width: 25%;
-  text-align: center;
-  margin: 20px 20px;
-}
-
-.color_footer_text {
-  color: #fff;
-}
-
-.languages_block {
+.logo_block_footer {
+  width: 33.33%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 50%;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  font-size: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.languages_block_text {
+.logo_footer {
+  width: 100px;
+  margin: 0 auto;
+}
+
+.social_network_icons_block {
+  width: 33.33%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.fb_icon {
+  width: 30px;
   height: 30px;
+  margin: 5px;
+}
+
+.inst_icon {
+  margin: 5px;
+}
+
+.contact_block {
+  width: 33.33%;
+  color: #fff;
   display: block;
-  color: #fff;
-  padding: 10px 5px;
-  margin: 10px 5px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+}
+.contact_block p {
+  display: block;
+  padding: 5px;
+  font-size: 16px;
+  font-weight: 300;
+}
+.contact_block p span {
+  font-family: "Amatic SC", cursive;
+  font-size: 18px;
+  font-weight: 700;
 }
 
-.languages_block_html {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: url(/img/BG.jpg) bottom no-repeat;
-}
-
-.languages_block_css {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: url(/img/BG.jpg) left no-repeat;
-}
-
-.languages_block_js {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: url(/img/BG.jpg) center no-repeat;
-}
-
-._color_lg_tx {
-  color: #fff;
-  padding: 10px 5px;
-  border-radius: 50px;
-  max-width: 100%;
-  height: 30px;
-  margin: 10px 5px;
-}
-
-@media (max-width: 991px) {
+@media (max-width: 767px) {
   .footer {
     display: block;
-    margin: 0 auto;
+    padding: 30px 20px;
   }
 
-  .languages_block {
-    max-width: 820px;
-    margin: 0 auto;
+  .logo_block_footer {
+    width: 100%;
+    margin: 0 0 20px 0;
   }
 
-  .languages_block_text {
+  .social_network_icons_block {
+    width: 100%;
+    margin: 0 0 20px 0;
+  }
+
+  .contact_block {
     width: 100%;
     text-align: center;
-    margin: 0 auto;
-  }
-
-  .languages_block_html {
-    width: 33.33%;
-  }
-
-  .languages_block_css {
-    width: 33.33%;
-  }
-
-  .languages_block_js {
-    width: 33.33%;
-  }
-
-  .tel_text {
-    width: 100%;
-    margin: 0 auto 10px auto;
-  }
-
-  .tel_mailto {
-    width: 100%;
-    margin: 0 auto;
-  }
-}
-@media (max-width: 767px) {
-  .languages_block {
-    width: 90%;
-    margin: 0 auto;
   }
 }
