--- a/css/header.css
+++ b/css/header.css
@@ -109,6 +109,10 @@ h1, h2, h3, h4, h5, h6 {
   width: 1200px;
 }
 
+.header_menu_block_burger {
+  display: none;
+}
+
 .header_menu_block {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -132,6 +136,21 @@ h1, h2, h3, h4, h5, h6 {
       -ms-flex-pack: center;
           justify-content: center;
   text-transform: uppercase;
-  font-size: 16px;
-  font-weight: 500;
+  font-size: 12px;
+  font-weight: 300;
+}
+
+._style_logo_menu {
+  width: 80px;
+}
+
+.header_fixed {
+  padding: 20px 10px;
+  overflow: hidden;
+  position: fixed;
+  opacity: 0.9;
+  top: 0;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 0 20px 0;
 }
