--- a/css/style.css
+++ b/css/style.css
@@ -97,11 +97,10 @@ body {
 
 .page {
   max-width: 100%;
-  height: 100%;
 }
 
 .logo_baner_container {
-  background: url(/img/bg_logo_block.jpg) 50%/cover no-repeat fixed;
+  background: url(/img/bg_img_1.jpg) 50%/cover no-repeat fixed;
   margin: 0 auto 20px auto;
 }
 
@@ -158,7 +157,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: url(/img/img_1.jpeg) right 0/cover no-repeat;
+  background: url(/img/img_1.jpeg) 0 0/cover no-repeat;
   width: 150px;
   height: 150px;
   border-radius: 50%;
@@ -226,31 +225,18 @@ body {
   border-radius: 20px;
 }
 
-.img_block {
-  width: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .img_block_1 {
-  background: url(/img/img_test_1.jpg) 0 0/cover no-repeat;
+  background: url(/img/auquauntance_block_img_1.jpg) 0 0/cover no-repeat;
   width: 50%;
-  min-height: 200px;
+  max-height: 200px;
   border-radius: 30px;
   margin: 15px;
 }
 
 .img_block_2 {
-  background: url(/img/img_test_2.jpg) 0 0/cover no-repeat;
+  background: url(/img/auquauntance_block_img_2.jpg) 0 50%/cover no-repeat;
   width: 50%;
-  min-height: 200px;
+  max-height: 200px;
   border-radius: 30px;
   margin: 15px;
 }
@@ -274,17 +260,17 @@ body {
 }
 
 .discription_title_block1, .discription_title_block2 {
-  padding: 15px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 0 auto;
+  margin: 15px;
   font-weight: 300;
 }
 .discription_title_block1 ul, .discription_title_block2 ul {
+  padding: 20px 0 0 0;
   min-height: 80%;
 }
 .discription_title_block1 ul:last-child, .discription_title_block2 ul:last-child {
@@ -300,10 +286,12 @@ body {
   font-size: 24px;
   font-weight: 700;
   margin: 0 0 20px 0;
+  padding: 10px 0 0 0;
 }
 
 .text_discription_block {
   padding: 5px;
+  font-size: 16px;
 }
 
 .discription_title_block2 {
@@ -383,8 +371,199 @@ body {
   width: 100%;
 }
 
+@media (max-width: 991px) {
+  .header_menu_container {
+    display: none;
+  }
+
+  .header_menu_block_burger {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    width: 100%;
+  }
+
+  .logo_burger_block {
+    width: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  ._style_logo_menu {
+    margin: 20px;
+  }
+
+  .burger_menu {
+    width: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+
+  .burger_menu_block {
+    display: inline-block;
+    margin: 20px;
+  }
+
+  .burger_1 {
+    width: 40px;
+    height: 5px;
+    background-color: #fff;
+    margin: 5px 0;
+  }
+
+  .burger_2 {
+    width: 40px;
+    height: 5px;
+    background-color: #fff;
+    margin: 5px 0;
+  }
+
+  .burger_3 {
+    width: 40px;
+    height: 5px;
+    background-color: #fff;
+    margin: 5px 0;
+  }
+
+  .discription_title_block1_container {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .discription_title_block2_container {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .discription_title_block1, .discription_title_block2 {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .img_block_1 {
+    background: url(/img/auquauntance_block_img_1.jpg) 0 50%/cover no-repeat;
+    width: 100%;
+    min-height: 400px;
+    border-radius: 20px;
+    margin: 0 0 10px 0;
+  }
+
+  .img_block_2 {
+    display: none;
+  }
+
+  .img_block_3 {
+    background: url(/img/auquauntance_block_img_2.jpg) 0 50%/cover no-repeat;
+    width: 100%;
+    height: 400px;
+    border-radius: 20px;
+    margin: 0 0 10px 0;
+  }
+
+  .partners_grid_container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+
+  .partners_grid_container > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+
+  .partners_grid_container > *:nth-child(2) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+  }
+
+  .partners_grid_container > *:nth-child(3) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+  }
+
+  .partners_grid_container > *:nth-child(4) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+  }
+
+  .partners_grid_container > *:nth-child(5) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+  }
+
+  .partners_grid_container > *:nth-child(6) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 2;
+  }
+
+  .partners_grid_container > *:nth-child(7) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+  }
+
+  .partners_grid_container > *:nth-child(8) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 2;
+  }
+}
 @media (max-width: 575px) {
+  .partners_grid_container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+  .partners_grid_container > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(2) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(3) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(4) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(5) {
+    -ms-grid-row: 5;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(6) {
+    -ms-grid-row: 6;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(7) {
+    -ms-grid-row: 7;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(8) {
+    -ms-grid-row: 8;
+    -ms-grid-column: 1;
+  }
+
   .logo_baner_container {
-    background: url(/img/bg_logo_block.jpg) 50%/cover no-repeat;
+    background: url(/img/bg_img_1.jpg) 50%/cover no-repeat;
   }
 }
