--- a/style.css
+++ b/style.css
@@ -90,6 +90,78 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  background-color: #111111;
+}
+
+.header__container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 100px;
+}
+
+.header__logo {
+  padding: 10px;
+  height: 90px;
+  position: relative;
+  z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.menu__list {
+  height: 30px;
+}
+
+.menu__link {
+  color: #ffffff;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 5px;
+}
+
+.menu__link:hover {
+  background-color: #ffffff;
+  color: #111111;
+  border-radius: 50px;
+}
+
+@media (min-width: 991px) {
+  .menu__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .menu__list > li {
+    padding: 0 10px;
+  }
+}
 body {
   max-width: 100%;
   font-family: "Roboto", sans-serif;
@@ -97,17 +169,25 @@ body {
 
 .page {
   max-width: 100%;
-  height: 100%;
 }
 
 .logo_baner_container {
-  background: url(/img/bg_logo_block.jpg) 50%/cover no-repeat fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: url(/img/bg_img_1.jpg) 50%/cover no-repeat fixed;
   margin: 0 auto 20px auto;
 }
 
 .logo_banner_block {
   min-height: 600px;
-  padding: 10% 0 0 0;
+  padding: 150px 0 0 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -203,6 +283,7 @@ body {
 .auquauntance_block {
   max-width: 1000px;
   margin: 0 auto 50px auto;
+  padding-top: 105px;
 }
 
 .discription_title_block1_container {
@@ -226,31 +307,18 @@ body {
   border-radius: 20px;
 }
 
-.img_block {
-  width: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .img_block_1 {
-  background: url(/img/img_test_1.jpg) 0 0/cover no-repeat;
+  background: url(/img/auquauntance_block_img_1.jpg) 0 0/cover no-repeat;
   width: 50%;
-  min-height: 200px;
+  max-height: 200px;
   border-radius: 30px;
   margin: 15px;
 }
 
 .img_block_2 {
-  background: url(/img/img_test_2.jpg) 0 0/cover no-repeat;
+  background: url(/img/auquauntance_block_img_2.jpg) 0 50%/cover no-repeat;
   width: 50%;
-  min-height: 200px;
+  max-height: 200px;
   border-radius: 30px;
   margin: 15px;
 }
@@ -274,17 +342,17 @@ body {
 }
 
 .discription_title_block1, .discription_title_block2 {
-  padding: 15px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 0 auto;
+  margin: 15px;
   font-weight: 300;
 }
 .discription_title_block1 ul, .discription_title_block2 ul {
+  padding: 20px 0 0 0;
   min-height: 80%;
 }
 .discription_title_block1 ul:last-child, .discription_title_block2 ul:last-child {
@@ -300,10 +368,12 @@ body {
   font-size: 24px;
   font-weight: 700;
   margin: 0 0 20px 0;
+  padding: 10px 0 0 0;
 }
 
 .text_discription_block {
   padding: 5px;
+  font-size: 16px;
 }
 
 .discription_title_block2 {
@@ -383,8 +453,239 @@ body {
   width: 100%;
 }
 
+@media (max-width: 991px) {
+  .menu__icon {
+    z-index: 5;
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+  }
+
+  .menu__icon span,
+.menu__icon::before,
+.menu__icon::after {
+    left: 0;
+    position: absolute;
+    z-index: 5;
+    height: 10%;
+    width: 100%;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    background-color: #ffffff;
+  }
+
+  .menu__icon::before,
+.menu__icon::after {
+    content: "";
+  }
+
+  .menu__icon::before {
+    top: 0;
+  }
+
+  .menu__icon::after {
+    bottom: 0;
+  }
+
+  .menu__icon span {
+    top: 50%;
+    -webkit-transform: scale(1) translate(0px, -50%);
+            transform: scale(1) translate(0px, -50%);
+  }
+
+  .menu__icon._active span {
+    -webkit-transform: scale(0) translate(0px, -50%);
+            transform: scale(0) translate(0px, -50%);
+  }
+
+  .menu__icon._active::before {
+    top: 50%;
+    -webkit-transform: rotate(-45deg) translate(0px, -50%);
+            transform: rotate(-45deg) translate(0px, -50%);
+  }
+
+  .menu__icon._active::after {
+    bottom: 50%;
+    -webkit-transform: rotate(45deg) translate(0px, 50%);
+            transform: rotate(45deg) translate(0px, 50%);
+  }
+
+  .menu__body {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #111111;
+    -webkit-transition: left 0.3s ease 0s;
+    transition: left 0.3s ease 0s;
+    padding: 130px 30px 30px 30px;
+    overflow: auto;
+  }
+
+  .menu__body._active {
+    left: 0;
+  }
+
+  .menu__body::before {
+    content: "";
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 100px;
+    background-color: #111111;
+  }
+
+  .menu__list > li {
+    text-align: center;
+    padding: 0 0 40px 0;
+  }
+
+  .menu__list > li:last-child {
+    padding: 0;
+  }
+
+  .menu__link {
+    font-size: 28px;
+    padding: 10px;
+    font-weight: 400;
+  }
+
+  .discription_title_block1_container {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .discription_title_block2_container {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .discription_title_block1, .discription_title_block2 {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .img_block_1 {
+    background: url(/img/auquauntance_block_img_1.jpg) 0 50%/cover no-repeat;
+    width: 100%;
+    min-height: 400px;
+    border-radius: 20px;
+    margin: 0 0 10px 0;
+  }
+
+  .img_block_2 {
+    display: none;
+  }
+
+  .img_block_3 {
+    background: url(/img/auquauntance_block_img_2.jpg) 0 50%/cover no-repeat;
+    width: 100%;
+    height: 400px;
+    border-radius: 20px;
+    margin: 0 0 10px 0;
+  }
+
+  .partners_grid_container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+
+  .partners_grid_container > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+
+  .partners_grid_container > *:nth-child(2) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+  }
+
+  .partners_grid_container > *:nth-child(3) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+  }
+
+  .partners_grid_container > *:nth-child(4) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+  }
+
+  .partners_grid_container > *:nth-child(5) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+  }
+
+  .partners_grid_container > *:nth-child(6) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 2;
+  }
+
+  .partners_grid_container > *:nth-child(7) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+  }
+
+  .partners_grid_container > *:nth-child(8) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 2;
+  }
+}
 @media (max-width: 575px) {
+  .partners_grid_container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+  .partners_grid_container > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(2) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(3) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(4) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(5) {
+    -ms-grid-row: 5;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(6) {
+    -ms-grid-row: 6;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(7) {
+    -ms-grid-row: 7;
+    -ms-grid-column: 1;
+  }
+  .partners_grid_container > *:nth-child(8) {
+    -ms-grid-row: 8;
+    -ms-grid-column: 1;
+  }
+
   .logo_baner_container {
-    background: url(/img/bg_logo_block.jpg) 50%/cover no-repeat;
+    background: url(/img/bg_img_1.jpg) 50%/cover no-repeat;
+  }
+
+  .logo_img_style {
+    width: 300px;
   }
 }
