--- a/css/style.css
+++ b/css/style.css
@@ -112,12 +112,12 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 100px;
+  height: 70px;
 }
 
 .header__logo {
   padding: 10px;
-  height: 90px;
+  height: 60px;
   position: relative;
   z-index: 10;
   display: -webkit-box;
@@ -129,6 +129,10 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.header__menu {
+  width: 100%;
 }
 
 .menu__list {
@@ -148,6 +152,18 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
 }
 
+.menu__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 body {
   max-width: 100%;
   font-family: "Roboto", sans-serif;
@@ -158,7 +174,7 @@ body._lock {
 }
 
 .page {
-  padding-top: 100px;
+  padding-top: 70px;
   max-width: 100%;
 }
 
@@ -172,7 +188,7 @@ body._lock {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background: url(/img/bg_img_1.jpg) 50%/cover no-repeat fixed;
+  background: url(/img/bg_section_1.jpg) 50%/cover no-repeat fixed;
   margin: 0 auto 20px auto;
 }
 
@@ -187,24 +203,10 @@ body._lock {
           justify-content: center;
 }
 
-.logo_img_style {
-  width: 400px;
-  display: block;
-  margin: 0 auto;
-}
-
-.text_logo_banner {
-  font-family: "Amatic SC", cursive;
-  font-weight: 700;
-  text-align: center;
-  color: rgb(255, 255, 255);
-  margin: 20px auto;
-  font-size: 24px;
-}
-
 .cooking_history_block {
   background-color: black;
-  padding: 30px;
+  margin: 0 auto;
+  padding: 75px 0;
 }
 
 ._modificator_titile {
@@ -269,11 +271,18 @@ body._lock {
           justify-content: center;
   width: 50%;
   padding: 10px;
+  line-height: 1.2;
+}
+
+.page__section_3 {
+  width: 100%;
+  background-color: rgba(221, 218, 218, 0.9529411765);
 }
 
 .smoking_history_block {
-  max-width: 1000px;
+  max-width: 900px;
   margin: 0 auto;
+  padding: 75px 0;
 }
 
 .smoking_process_cintainer {
@@ -281,9 +290,9 @@ body._lock {
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: minmax(100px 1fr) 1fr 1fr;
-  grid-template-rows: minmax(100px 1fr) 1fr 1fr;
-      grid-template-areas: "text_block_1 text_block_1 text_block_4" "text_block_2 text_block_2 text_block_4" "text_block_3 text_block_3 text_block_4";
+  -ms-grid-rows: minmax(100px 400px) minmax(100px 400px) minmax(100px 1fr);
+  grid-template-rows: minmax(100px 400px) minmax(100px 400px) minmax(100px 1fr);
+      grid-template-areas: "text_block_1 text_block_1 text_block_1" "text_block_2 text_block_2 text_block_3" "text_block_4 text_block_4 text_block_4";
 }
 
 .text_smoking_process {
@@ -293,50 +302,59 @@ body._lock {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 1000px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 900px;
   color: #111111;
-  padding: 10px;
+  padding: 20px;
   text-align: left;
-  margin: 0 10px;
   line-height: 1.2;
+  font-weight: 300;
   font-size: 16px;
 }
 
 ._mod_text_smoking_1 {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
+  -ms-grid-column-span: 3;
+  background-color: rgba(255, 255, 255, 0.8156862745);
+  padding: 20px;
   grid-area: text_block_1;
+  margin: 10px;
 }
 
 ._mod_text_smoking_2 {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
+  background-color: rgba(255, 255, 255, 0.8156862745);
   grid-area: text_block_2;
+  margin: 10px;
 }
 
 ._mod_text_smoking_3 {
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: text_block_3;
-}
-
-._mod_text_smoking_4 {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 3;
+  -ms-grid-row: 2;
   -ms-grid-column: 3;
   background-color: rgba(0, 0, 0, 0.8156862745);
   color: #ffffff;
-  border-radius: 10px;
+  grid-area: text_block_3;
+  margin: 10px;
+}
+
+._mod_text_smoking_4 {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  background-color: rgba(255, 255, 255, 0.8156862745);
   grid-area: text_block_4;
+  margin: 10px;
 }
 
 .auquauntance_block {
-  max-width: 1000px;
-  margin: 0 auto 50px auto;
-  padding-top: 105px;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 75px 0;
 }
 
 .discription_title_block1_container {
@@ -357,14 +375,12 @@ body._lock {
 
 .img_auquauntance_block {
   width: 100%;
-  border-radius: 20px;
 }
 
 .img_block_1 {
   background: url(/img/auquauntance_block_img_1.jpg) 0 0/cover no-repeat;
   width: 50%;
   max-height: 200px;
-  border-radius: 30px;
   margin: 15px;
 }
 
@@ -372,7 +388,6 @@ body._lock {
   background: url(/img/auquauntance_block_img_2.jpg) 0 50%/cover no-repeat;
   width: 50%;
   max-height: 200px;
-  border-radius: 30px;
   margin: 15px;
 }
 
@@ -434,7 +449,8 @@ body._lock {
 }
 
 .partners_block {
-  padding: 30px;
+  margin: 0 auto;
+  padding: 75px 0;
 }
 
 .partners_grid_container {
@@ -442,8 +458,8 @@ body._lock {
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  -ms-grid-rows: 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px;
 }
 
 .partners_grid_container > *:nth-child(1) {
@@ -628,7 +644,7 @@ body._lock {
     width: 100%;
     top: 0;
     left: 0;
-    height: 100px;
+    height: 70px;
     background-color: #111111;
   }
 
@@ -667,7 +683,6 @@ body._lock {
     background: url(/img/auquauntance_block_img_1.jpg) 0 50%/cover no-repeat;
     width: 100%;
     min-height: 400px;
-    border-radius: 20px;
     margin: 0 0 10px 0;
   }
 
@@ -679,7 +694,6 @@ body._lock {
     background: url(/img/auquauntance_block_img_2.jpg) 0 50%/cover no-repeat;
     width: 100%;
     height: 400px;
-    border-radius: 20px;
     margin: 0 0 10px 0;
   }
 
@@ -688,8 +702,8 @@ body._lock {
     display: grid;
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    -ms-grid-rows: 100px 100px 100px 100px 100px 100px 100px;
+    grid-template-rows: 100px 100px 100px 100px 100px 100px 100px;
   }
 
   .partners_grid_container > *:nth-child(1) {
@@ -777,6 +791,12 @@ body._lock {
   }
 }
 @media (max-width: 767px) {
+  .smoking_history_block {
+    width: 100%;
+    margin: 0 auto;
+    padding: 75px 0;
+  }
+
   .smoking_process_cintainer {
     display: -ms-grid;
     display: grid;
@@ -790,7 +810,7 @@ body._lock {
   ._mod_text_smoking_1 {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
+    -ms-grid-column-span: 3;
     grid-area: text_block_1;
   }
 
@@ -799,47 +819,50 @@ body._lock {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: text_block_2;
-    border-radius: 10px;
     background-color: black;
     color: #ffffff;
   }
 
   ._mod_text_smoking_3 {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
+    -ms-grid-row: 2;
+    -ms-grid-column: 3;
     grid-area: text_block_3;
+    background-color: #ffffff;
+    color: #111111;
   }
 
   ._mod_text_smoking_4 {
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 3;
-    -ms-grid-column: 3;
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-area: text_block_4;
     background-color: black;
     color: #ffffff;
   }
 
   @media (max-width: 767px){
+
   ._mod_text_smoking_1 {
       -ms-grid-row: 1;
       -ms-grid-column: 1;
       -ms-grid-column-span: 1;
   }
+
   ._mod_text_smoking_2 {
       -ms-grid-row: 2;
       -ms-grid-column: 1;
       -ms-grid-column-span: 1;
   }
+
   ._mod_text_smoking_3 {
       -ms-grid-row: 3;
       -ms-grid-column: 1;
-      -ms-grid-column-span: 1;
   }
+
   ._mod_text_smoking_4 {
       -ms-grid-row: 4;
-      -ms-grid-row-span: 1;
       -ms-grid-column: 1;
+      -ms-grid-column-span: 1;
   }
   }
 
@@ -847,25 +870,28 @@ body._lock {
     margin: 20px;
     padding: 20px;
   }
+
   ._mod_text_smoking_1 {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
   }
+
   ._mod_text_smoking_2 {
     -ms-grid-row: 2;
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
   }
+
   ._mod_text_smoking_3 {
     -ms-grid-row: 3;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
   }
+
   ._mod_text_smoking_4 {
     -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
     -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
   }
 }
 @media (max-width: 575px) {
@@ -874,8 +900,8 @@ body._lock {
     display: grid;
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
-    -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    -ms-grid-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
+    grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
   }
   .partners_grid_container > *:nth-child(1) {
     -ms-grid-row: 1;
@@ -931,7 +957,7 @@ body._lock {
   }
 
   .logo_baner_container {
-    background: url(/img/bg_img_1.jpg) 50%/cover no-repeat;
+    background: url(/img/bg_section_1.jpg) 50%/cover no-repeat;
   }
 
   .logo_img_style {
